Update .tmux.conf to replace existing plugins with new ones, enhancing functionality with tmux-mighty-scroll, tmux-better-mouse-mode, tmux-resurrect, tmux-continuum, tmux-yank, and minimal-tmux-status. Remove previous CPU and network speed plugins.

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -3,8 +3,12 @@
 # prefix + I to install plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-cpu'
-set -g @plugin 'tmux-plugins/tmux-net-speed'
+set -g @plugin 'noscript/tmux-mighty-scroll'
+set -g @plugin 'nhdaly/tmux-better-mouse-mode'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'niksingh710/minimal-tmux-status'
 
 set -g status-interval 1
 set -s escape-time 10                       # faster command sequences
@@ -53,15 +57,5 @@ bind -r C-l next-window     # select next window
 bind Tab last-window        # move to last active window
 
 bind F run "cut -c3- '#{TMUX_CONF}' | sh -s _fpp '#{pane_id}' '#{pane_current_path}'"
-
-# Customize status bar
-set -g status-style bg=default,fg=white
-set -g status-right ''
-setw -g window-status-current-format '#[fg=colour76,bold](#I:#{pane_current_command})#[default]'
-setw -g window-status-format '#[fg=gray](#I:#{pane_current_command})#[default]'
-set -g status-left '#[fg=colour76]#[bg=colour76] TMUX #S#[default]#[fg=colour76]#[default] '
-set -g status-left-length 40
-set -g status-right '#{cpu_fg_color}  #{cpu_percentage} #[fg=colour76]'
-# set -g status-right '#{cpu_fg_color}  #{cpu_percentage} #[fg=colour76]  #{download_speed}  #{upload_speed}'
 
 run '~/.tmux/plugins/tpm/tpm'
