--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,4 +1,6 @@
 # Install:
+if "test ! -d ~/.tmux/plugins/tpm" \
+   "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
 # git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
 # prefix + I to install plugins
 set -g @plugin 'tmux-plugins/tpm'
