--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -19,9 +19,14 @@ set -g prefix2 C-a                        # GNU-Screen compatible prefix
 bind C-a send-prefix -2
 
 setw -g automatic-rename on   # rename window to reflect current program
-set -g renumber-windows on    # renumber windows when a window is closed
+set -g allow-rename on       # allow programs to change window name
+setw -g automatic-rename-format '#T'
+
+set -g renumber-windows off   # renumber windows when a window is closed
 
 set -g set-titles on          # set terminal title
+set -g set-titles-string "#T"
+
 
 set -g display-panes-time 800 # slightly longer pane indicators display time
 set -g display-time 1000      # slightly longer status messages display time
@@ -29,12 +34,6 @@ set -g display-time 1000      # slightly longer status messages display time
 
 set -g monitor-activity on
 set -g visual-activity off
-
-# Monitor silence (5 seconds) with visual hints only
-setw -g monitor-silence 5
-set -g visual-silence on
-set -g visual-bell off
-set -g bell-action none
 
 set -g mouse on               # Always enable mouse mode
 set -g aggressive-resize off  # Disable aggressive-resize for iTerm2 compatibility
