--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -113,4 +113,63 @@ bind-key -Toff S-F12 \
   set -g key-table root \; \
   display-message "F-keys ON"
 
+## Copy mode enhance
+
+unbind -T copy-mode-vi MouseDragEnd1Pane # don't exit copy mode when dragging with mouse
+bind-key -T copy-mode-vi 'v' send -X begin-selection # start selecting text with "v"
+
+##### --- ENTER INNER TEXT OBJECT MODE (v + i + motion) --- #####
+# Changed from y + i to v + i for vim-like visual selection
+bind -T copy-mode-vi v switch-client -T copyModeVisualKey
+bind -T copyModeVisualKey i switch-client -T copyModeVisualKey_i
+
+bind -T copyModeVisualKey_i w \
+  send-keys -X select-word \;
+
+bind -T copyModeVisualKey_i W \
+  send-keys -X clear-selection \; \
+  send-keys -X previous-space \; \
+  send-keys -X begin-selection \; \
+  send-keys -X next-space-end \;
+
+bind -T copyModeVisualKey_i b \
+  send-keys -X jump-to-backward '(' \; \
+  send-keys -X begin-selection \; \
+  send-keys -X jump-to-forward ')' \;
+
+bind -T copyModeVisualKey_i B \
+  send-keys -X jump-to-backward '{' \; \
+  send-keys -X begin-selection \; \
+  send-keys -X jump-to-forward '}' \;
+
+bind -T copyModeVisualKey_i [ \
+  send-keys -X jump-to-backward '[' \; \
+  send-keys -X begin-selection \; \
+  send-keys -X jump-to-forward ']' \;
+
+bind -T copyModeVisualKey_i \' \
+  send-keys -X jump-to-backward "'" \; \
+  send-keys -X begin-selection \; \
+  send-keys -X jump-to-forward "'" \;
+
+bind -T copyModeVisualKey_i \" \
+  send-keys -X jump-to-backward '"' \; \
+  send-keys -X begin-selection \; \
+  send-keys -X jump-to-forward '"' \;
+
+bind -T copyModeVisualKey_i ` \
+  send-keys -X jump-to-backward '`' \; \
+  send-keys -X begin-selection \; \
+  send-keys -X jump-to-forward '`' \;
+
+bind -T copyModeVisualKey_i < \
+  send-keys -X jump-to-backward '<' \; \
+  send-keys -X begin-selection \; \
+  send-keys -X jump-to-forward '>' \;
+
+bind -T copyModeVisualKey_i > \
+  send-keys -X jump-to-backward '<' \; \
+  send-keys -X begin-selection \; \
+  send-keys -X jump-to-forward '>' \;
+
 run '~/.tmux/plugins/tpm/tpm'
