--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -113,6 +113,11 @@ bind-key -Toff S-F12 \
   set -g key-table root \; \
   display-message "F-keys ON"
 
+## Clipboard
+
+set -g set-clipboard on
+set -s copy-command 'osc52'  # tmux 3.3+
+
 ## Copy mode enhance
 
 unbind -T copy-mode-vi MouseDragEnd1Pane # don't exit copy mode when dragging with mouse
