--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -38,6 +38,11 @@ set -g visual-activity off
 set -g mouse on               # Always enable mouse mode
 set -g aggressive-resize off  # Disable aggressive-resize for iTerm2 compatibility
 
+set -g allow-passthrough on # Passthrough support for yazi, weterm etc.
+set -ga update-environment TERM
+set -ga update-environment TERM_PROGRAM
+set -sa terminal-features '*:passthrough'
+
 bind C-c new-session
 
 
