--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -61,8 +61,11 @@ bind -r J resize-pane -D 2
 bind -r K resize-pane -U 2
 bind -r L resize-pane -R 2
 
-
-bind F run "cut -c3- '#{TMUX_CONF}' | sh -s _fpp '#{pane_id}' '#{pane_current_path}'"
+# popup
+set -g command-alias[100] popup-shell="display-popup -E -w 80% -h 80% -d '#{pane_current_path}'"
+bind-key P popup-shell fish
+bind-key s splitw -h -l 60 -c "#{pane_current_path}"
+bind-key g popup-shell lazygit
 
 # Enable xterm-keys for proper F-key support
 set -g xterm-keys on
