Update 1Password sync workflow

--- a/.env
+++ b/.env
@@ -10,3 +10,4 @@ export V3_BASE_URL="https://api.v3.cm/v1"
 export OPENROUTER_BASE_URL="https://openrouter.ai/api/v1"
 export PUSHOVER_APP_TOKEN="op://Personal/5s4bs22vooynzpdjaixqvz7kae/CREDENTAILS/PUSHOVER_APP_TOKEN"
 export PUSHOVER_USER_KEY="op://Personal/5s4bs22vooynzpdjaixqvz7kae/CREDENTAILS/PUSHOVER_USER_KEY"
+export TAVILY_API_KEY="op://Personal/Tavily/CREDENTIALS"
