chore: sync dotfiles
- update fish aliases/functions and general config

- update tmux config

- update install/uninstall scripts

- remove claude command docs and cc conf

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -38,10 +38,14 @@ set -g visual-activity off
 set -g mouse on               # Always enable mouse mode
 set -g aggressive-resize off  # Disable aggressive-resize for iTerm2 compatibility
 
+# set -g destroy-unattached on  # automatically kill sessions with no clients attached
 set -g allow-passthrough on # Passthrough support for yazi, weterm etc.
 set -ga update-environment TERM
 set -ga update-environment TERM_PROGRAM
 set -sa terminal-features '*:passthrough'
+set -g default-terminal "tmux-256color"
+set -ga terminal-overrides ',xterm-256color:RGB'
+
 
 bind C-c new-session
 
