--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -43,8 +43,23 @@ set -ga update-environment TERM
 set -ga update-environment TERM_PROGRAM
 set -sa terminal-features '*:passthrough'
 
-bind C-c new-session
+# VSCode Terminal Integration Support
 
+set -ga update-environment "TERM_PROGRAM"
+set -ga update-environment "TERM_PROGRAM_VERSION"
+set -ga update-environment "VSCODE_IPC_HOOK_CLI"
+set -ga update-environment "VSCODE_IPC_HOOK"
+set -ga update-environment "VSCODE_PID"
+set -ga update-environment "VSCODE_CWD"
+set -ga update-environment "VSCODE_NLS_CONFIG"
+set -ga update-environment "VSCODE_GIT_IPC_HANDLE"
+set -ga update-environment "VSCODE_INJECTION"
+set -ga update-environment "VSCODE_SHELL_INTEGRATION"
+
+if-shell '[ -n "$VSCODE_IPC_HOOK_CLI" ]' 'set -g status off'
+
+
+bind C-c new-session
 
 set-window-option -g mode-keys vi
 bind h select-pane -L  # move left
@@ -64,7 +79,8 @@ bind -r L resize-pane -R 2
 # popup
 set -g command-alias[100] popup-shell="display-popup -E -w 80% -h 80% -d '#{pane_current_path}'"
 bind-key P popup-shell fish
-bind-key s splitw -h -l 60 -c "#{pane_current_path}"
+bind-key s choose-tree -sf '#{window_format}' -F '#{window_index}: #{window_name}'
+
 bind-key g popup-shell lazygit
 
 # Enable xterm-keys for proper F-key support
