chore(tmux): update .tmux.conf

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -60,8 +60,7 @@ set -ga update-environment "VSCODE_GIT_IPC_HANDLE"
 set -ga update-environment "VSCODE_INJECTION"
 set -ga update-environment "VSCODE_SHELL_INTEGRATION"
 
-if-shell '[ -n "$VSCODE_IPC_HOOK_CLI" ]' 'set -g status off'
-
+if-shell '[ "$TERM_PROGRAM" = "vscode" ]' 'set -g status off'
 
 bind C-c new-session
 
