tmux: disable automatic mouse yank

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -137,9 +137,11 @@ bind-key -Toff S-F12 \
 
 set -g set-clipboard on
 set -s copy-command 'osc52'  # tmux 3.3+
+set -g @yank_with_mouse off  # disable automatic copy on mouse selection
 
 ## Copy mode enhance
 
+unbind -T copy-mode MouseDragEnd1Pane  # ensure mouse selection doesn't auto-copy (emacs table)
 unbind -T copy-mode-vi MouseDragEnd1Pane # don't exit copy mode when dragging with mouse
 bind-key -T copy-mode-vi 'v' send -X begin-selection # start selecting text with "v"
 
