Refine fish shell setup

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -82,7 +82,8 @@ bind -r L resize-pane -R 2
 # popup
 set -g command-alias[100] popup-shell="display-popup -E -w 80% -h 80% -d '#{pane_current_path}'"
 bind-key P popup-shell fish
-bind-key s choose-tree -sf '#{window_format}' -F '#{window_index}: #{window_name}'
+bind-key s choose-tree -sf '#{window_format}' -F '#{window_name} #[#{?session_attached,fg=green,fg=red}]#{?session_attached,A ,D }#[default]'
+
 
 bind-key g popup-shell lazygit
 
