Comment out VSCode tmux environment updates

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -49,18 +49,18 @@ set -ga terminal-overrides ',xterm-256color:RGB'
 
 # VSCode Terminal Integration Support
 
-set -ga update-environment "TERM_PROGRAM"
-set -ga update-environment "TERM_PROGRAM_VERSION"
-set -ga update-environment "VSCODE_IPC_HOOK_CLI"
-set -ga update-environment "VSCODE_IPC_HOOK"
-set -ga update-environment "VSCODE_PID"
-set -ga update-environment "VSCODE_CWD"
-set -ga update-environment "VSCODE_NLS_CONFIG"
-set -ga update-environment "VSCODE_GIT_IPC_HANDLE"
-set -ga update-environment "VSCODE_INJECTION"
-set -ga update-environment "VSCODE_SHELL_INTEGRATION"
+# set -ga update-environment "TERM_PROGRAM"
+# set -ga update-environment "TERM_PROGRAM_VERSION"
+# set -ga update-environment "VSCODE_IPC_HOOK_CLI"
+# set -ga update-environment "VSCODE_IPC_HOOK"
+# set -ga update-environment "VSCODE_PID"
+# set -ga update-environment "VSCODE_CWD"
+# set -ga update-environment "VSCODE_NLS_CONFIG"
+# set -ga update-environment "VSCODE_GIT_IPC_HANDLE"
+# set -ga update-environment "VSCODE_INJECTION"
+# set -ga update-environment "VSCODE_SHELL_INTEGRATION"
 
-if-shell '[ "$TERM_PROGRAM" = "vscode" ]' 'set -g status off'
+# if-shell '[ "$TERM_PROGRAM" = "vscode" ]' 'set -g status off'
 
 bind C-c new-session
 
