Fix tmux visual yank bindings

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -144,12 +144,18 @@ set -g @yank_with_mouse off  # disable automatic copy on mouse selection
 
 unbind -T copy-mode MouseDragEnd1Pane  # ensure mouse selection doesn't auto-copy (emacs table)
 unbind -T copy-mode-vi MouseDragEnd1Pane # don't exit copy mode when dragging with mouse
-bind-key -T copy-mode-vi 'v' send -X begin-selection # start selecting text with "v"
-
 ##### --- ENTER INNER TEXT OBJECT MODE (v + i + motion) --- #####
 # Changed from y + i to v + i for vim-like visual selection
-bind -T copy-mode-vi v switch-client -T copyModeVisualKey
+bind -T copy-mode-vi v \
+  send-keys -X begin-selection \; \
+  switch-client -T copyModeVisualKey
 bind -T copyModeVisualKey i switch-client -T copyModeVisualKey_i
+bind -T copyModeVisualKey y \
+  send-keys -X copy-selection-and-cancel \; \
+  switch-client -T copy-mode-vi
+bind -T copyModeVisualKey_i y \
+  send-keys -X copy-selection-and-cancel \; \
+  switch-client -T copy-mode-vi
 
 bind -T copyModeVisualKey_i w \
   send-keys -X select-word \;
