Add zsh-nvm and clean up shell completions
Add zsh-nvm module for Node version management. Source ~/.profile
for environment variables. Remove uv, uvx, and codex completion
setup to reduce shell startup overhead.

--- a/.zimrc
+++ b/.zimrc
@@ -20,6 +20,8 @@ zmodule exa
 zmodule direnv
 # Sets up fzf shell integration (requires fzf >= 0.48.0).
 zmodule fzf
+# Node Version Manager for Zsh.
+zmodule lukechilds/zsh-nvm
 
 #
 # Prompt
