Improve zsh config with better history and performance
- Add archive and ssh modules to zimrc
- Increase history size to 50000 with additional options
- Reduce proxy detection timeout from 1s to 0.1s
- Add NO_PROXY for localhost exceptions
- Update docker-compose alias to docker compose
- Simplify EDITOR selection logic

--- a/.zimrc
+++ b/.zimrc
@@ -22,6 +22,10 @@ zmodule direnv
 zmodule fzf
 # Node Version Manager for Zsh.
 zmodule lukechilds/zsh-nvm
+# Provides archive extraction helpers.
+zmodule archive
+# Provides ssh-agent integration.
+zmodule ssh
 
 #
 # Prompt
