Fix excessive output on startup

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -69,7 +69,7 @@ bind -r L resize-pane -R 2
 # popup
 set -g command-alias[100] popup-shell="display-popup -E -w 80% -h 80% -d '#{pane_current_path}'"
 bind-key P popup-shell fish
-bind-key s choose-tree -sf '#{window_format}' -F '#{window_name} #[#{?session_attached,fg=green,fg=red}]#{?session_attached,A ,D }#[default]'
+bind-key s choose-tree -s -F '#{window_name} #[#{?session_attached,fg=green,fg=red}]#{?session_attached,A ,D }#[default]'
 
 
 bind-key g popup-shell lazygit
