Update configs: zoxide alias, Claude statusline, lazygit editor
- Change zoxide alias back to cd for muscle memory compatibility
- Add Claude Code statusline with ccstatusline command
- Enable swift-lsp plugin in Claude settings
- Configure nvim as lazygit editor with line navigation
- Fix lazygit pager config format (paging -> pagers)
- Add Hugging Face CLI to PATH

--- a/lazygit.yml
+++ b/lazygit.yml
@@ -1,10 +1,13 @@
 # lazygit config
 
+os:
+  edit: 'nvim {{filename}}'
+  editAtLine: 'nvim +{{line}} {{filename}}'
 gui:
   showFileTree: true # Show files in tree view
   showRandomTip: false # Disable startup tips
   showCommandLog: false # Hide command log at bottom
   nerdFontsVersion: "3" # Enable Nerd Font icons
 git:
-  paging:
-    useConfig: true # Use git's pager config (e.g., delta)
+  pagers:
+    - useConfig: true # Use git's pager config (e.g., delta)
