Update tmux: pane borders, popup nvim, sesh, extrakto
- Add pane border styling with title display
- Replace popup fish/lazygit with nvim editor (prefix+g)
- Add extrakto plugin for text extraction
- Add sesh session management (prefix+T)
- Add quick pane selection (1-5) and split path retention
- Start window/pane indexing at 1

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,8 +5,9 @@ if "test ! -d ~/.tmux/plugins/tpm" \
 # prefix + I to install plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'noscript/tmux-mighty-scroll'
 set -g @plugin 'nhdaly/tmux-better-mouse-mode'
+set -g @plugin 'laktak/extrakto'
+set -g @extrakto_grab_area "window recent"
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-yank'
@@ -30,6 +31,14 @@ set -g set-titles-string "#T"
 
 set -g display-panes-time 800 # slightly longer pane indicators display time
 set -g display-time 1000      # slightly longer status messages display time
+
+# Pane border styling - highlight active pane
+set -g pane-border-style 'fg=colour238'
+set -g pane-active-border-style 'fg=green,bold'
+
+# Show pane title in border
+set -g pane-border-status top
+set -g pane-border-format ' #[fg=colour243]#{pane_index}#[default] #{pane_title} '
 
 
 set -g monitor-activity on
@@ -66,13 +75,17 @@ bind -r J resize-pane -D 2
 bind -r K resize-pane -U 2
 bind -r L resize-pane -R 2
 
+# Quick pane selection by number
+bind 1 select-pane -t 1
+bind 2 select-pane -t 2
+bind 3 select-pane -t 3
+bind 4 select-pane -t 4
+bind 5 select-pane -t 5
+
 # popup
-set -g command-alias[100] popup-shell="display-popup -E -w 80% -h 80% -d '#{pane_current_path}'"
-bind-key P popup-shell fish
+set -g popup-border-lines rounded
+bind-key g display-popup -E -w 90% -h 90% -d '#{pane_current_path}' nvim .
 bind-key s choose-tree -s -F '#{window_name} #[#{?session_attached,fg=green,fg=red}]#{?session_attached,A ,D }#[default]'
-
-
-bind-key g popup-shell lazygit
 
 # Enable xterm-keys for proper F-key support
 set -g xterm-keys on
@@ -90,5 +103,17 @@ unbind -T copy-mode-vi MouseDragEnd1Pane # don't exit copy mode when dragging wi
 # Vi copy mode bindings
 bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-selection-and-cancel
+
+# sesh session management (prefix + T)
+set -g detach-on-destroy off
+bind-key "T" run-shell "sesh connect \"$(sesh list | fzf-tmux -p 55%,60% --no-sort --ansi)\""
+
+# Keep current path when splitting
+bind - split-window -v -c "#{pane_current_path}"
+bind \\ split-window -h -c "#{pane_current_path}"
+
+# Start window/pane indexing at 1
+set -g base-index 1
+setw -g pane-base-index 1
 
 run '~/.tmux/plugins/tpm/tpm'
