Restyle tmux tabs as rounded pill shapes with light gray bg
- Active tab: pill shape with rounded powerline glyphs, light gray
  background (#e0e0e0) and black text
- Inactive tabs: muted gray text (#8c8fa1) with matched padding
- Separator line: softer color (#dce0e8)
- Also includes: custom status bar, pane border styling, alt-key
  bindings, and other accumulated tmux config updates

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,9 +11,17 @@ set -g @extrakto_grab_area "window recent"
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'niksingh710/minimal-tmux-status'
 
 set -g status-interval 1
+set -g status-position top
+set -g status 2
+set -g status-style 'bg=default,fg=default'
+set -g status-format[1] '#[fg=#dce0e8]#(awk "BEGIN{for(i=1;i<=300;i++) printf \"─\"}")'
+set -g status-left ''
+set -g status-right ''
+setw -g window-status-format '#[fg=#8c8fa1]  #I #W  #[default]'
+setw -g window-status-current-format '#[fg=#e0e0e0]#[fg=#000000,bg=#e0e0e0,bold] #I #W #[fg=#e0e0e0,bg=default]#[default]'
+setw -g window-status-current-style ''
 set -s escape-time 10                       # faster command sequences
 
 set -g prefix2 C-a                        # GNU-Screen compatible prefix
@@ -33,19 +41,18 @@ set -g display-panes-time 800 # slightly longer pane indicators display time
 set -g display-time 1000      # slightly longer status messages display time
 
 # Pane border styling - highlight active pane
-set -g pane-border-style 'fg=colour238'
-set -g pane-active-border-style 'fg=green,bold'
+set -g pane-border-lines heavy
+set -g pane-border-style 'fg=default,dim'
+set -g pane-active-border-style 'fg=blue'
 
-# Show pane title in border
-set -g pane-border-status top
-set -g pane-border-format ' #[fg=colour243]#{pane_index}#[default] #{pane_title} '
+# Show pane title in border (reverse adapts to any theme automatically)
+set -g pane-border-status off
+set-hook -g window-layout-changed "if-shell -F '#{==:#{window_panes},1}' 'set -w pane-border-status off' 'set -w pane-border-status top'"
+set -g pane-border-format '#{?pane_active,#[reverse#,bold] #{pane_index} #{pane_title} #[default],#[dim] #{pane_index} #{pane_title} #[default]}'
 
-
-set -g monitor-activity on
-set -g visual-activity off
+set -g monitor-activity off
 
 set -g mouse on               # Always enable mouse mode
-set -g aggressive-resize off  # Disable aggressive-resize for iTerm2 compatibility
 
 # set -g destroy-unattached on  # automatically kill sessions with no clients attached
 set -g allow-passthrough on # Passthrough support for yazi, weterm etc.
@@ -116,4 +123,61 @@ bind \\ split-window -h -c "#{pane_current_path}"
 set -g base-index 1
 setw -g pane-base-index 1
 
+# ============================================
+# Alt-key bindings (no prefix needed)
+# ============================================
+
+# -- Pane navigation (Alt+hjkl) --
+bind -n M-h select-pane -L
+bind -n M-j select-pane -D
+bind -n M-k select-pane -U
+bind -n M-l select-pane -R
+
+# -- Pane splitting (keep current path) --
+bind -n M-- split-window -v -c "#{pane_current_path}"
+bind -n M-\\ split-window -h -c "#{pane_current_path}"
+
+# -- Pane resizing (Alt+Shift+HJKL) --
+bind -n M-H resize-pane -L 2
+bind -n M-J resize-pane -D 2
+bind -n M-K resize-pane -U 2
+bind -n M-L resize-pane -R 2
+
+# -- Pane management --
+bind -n M-z resize-pane -Z              # zoom toggle
+bind -n M-x kill-pane                   # close pane
+bind -n M-> swap-pane -D               # swap with next
+bind -n M-< swap-pane -U               # swap with previous
+bind -n M-q display-panes              # show pane numbers
+
+# -- Window navigation (Alt+number) --
+bind -n M-1 select-window -t :1
+bind -n M-2 select-window -t :2
+bind -n M-3 select-window -t :3
+bind -n M-4 select-window -t :4
+bind -n M-5 select-window -t :5
+bind -n M-6 select-window -t :6
+bind -n M-7 select-window -t :7
+bind -n M-8 select-window -t :8
+bind -n M-9 select-window -t :9
+
+# -- Window operations --
+bind -n M-c new-window -c "#{pane_current_path}"
+bind -n M-n next-window
+bind -n M-p previous-window
+bind -n M-w choose-window              # window picker
+
+# -- Session --
+bind -n M-s choose-tree -s -F '#{window_name} #[#{?session_attached,fg=green,fg=red}]#{?session_attached,A ,D }#[default]'
+bind -n M-t run-shell "sesh connect \"$(sesh list | fzf-tmux -p 55%,60% --no-sort --ansi)\""
+
+# -- Copy mode --
+bind -n M-v copy-mode
+
+# -- Popup nvim --
+bind -n M-g display-popup -E -w 90% -h 90% -d '#{pane_current_path}' nvim .
+
 run '~/.tmux/plugins/tpm/tpm'
+
+# Override tmux-sensible's aggressive-resize (must be after TPM for iTerm2 compatibility)
+set -g aggressive-resize off
