--- a/.tmux.conf
+++ b/.tmux.conf
@@ -17,6 +17,7 @@ set -g status-position top
 set -g status 2
 set -g status-style 'bg=default,fg=default'
 set -g status-format[1] '#[fg=#dce0e8]#(awk "BEGIN{for(i=1;i<=300;i++) printf \"─\"}")'
+set -g status-justify centre
 set -g status-left ''
 set -g status-right ''
 setw -g window-status-format '#[fg=#8c8fa1]  #I #W  #[default]'
@@ -48,7 +49,7 @@ set -g pane-active-border-style 'fg=blue'
 # Show pane title in border (reverse adapts to any theme automatically)
 set -g pane-border-status off
 set-hook -g window-layout-changed "if-shell -F '#{==:#{window_panes},1}' 'set -w pane-border-status off' 'set -w pane-border-status top'"
-set -g pane-border-format '#{?pane_active,#[reverse#,bold] #{pane_index} #{pane_title} #[default],#[dim] #{pane_index} #{pane_title} #[default]}'
+set -g pane-border-format '#{?pane_active,#[default]#[reverse#,bold] #{pane_index} #{pane_title} #[default],#[dim] #{pane_index} #{pane_title} #[default]}'
 
 set -g monitor-activity off
 
@@ -75,19 +76,17 @@ bind l select-pane -R  # move right
 bind > swap-pane -D       # swap current pane with the next one
 bind < swap-pane -U       # swap current pane with the previous one
 
+# Alt+1-3 to select pane by number (used via Ghostty Cmd+Shift+1-3)
+bind -n M-1 select-pane -t 1
+bind -n M-2 select-pane -t 2
+bind -n M-3 select-pane -t 3
+
 bind + run "cut -c3- '#{TMUX_CONF}' | sh -s _maximize_pane '#{session_name}' '#D'"
 
 bind -r H resize-pane -L 2
 bind -r J resize-pane -D 2
 bind -r K resize-pane -U 2
 bind -r L resize-pane -R 2
-
-# Quick pane selection by number
-bind 1 select-pane -t 1
-bind 2 select-pane -t 2
-bind 3 select-pane -t 3
-bind 4 select-pane -t 4
-bind 5 select-pane -t 5
 
 # popup
 set -g popup-border-lines rounded
@@ -122,60 +121,6 @@ bind \\ split-window -h -c "#{pane_current_path}"
 # Start window/pane indexing at 1
 set -g base-index 1
 setw -g pane-base-index 1
-
-# ============================================
-# Alt-key bindings (no prefix needed)
-# ============================================
-
-# -- Pane navigation (Alt+hjkl) --
-bind -n M-h select-pane -L
-bind -n M-j select-pane -D
-bind -n M-k select-pane -U
-bind -n M-l select-pane -R
-
-# -- Pane splitting (keep current path) --
-bind -n M-- split-window -v -c "#{pane_current_path}"
-bind -n M-\\ split-window -h -c "#{pane_current_path}"
-
-# -- Pane resizing (Alt+Shift+HJKL) --
-bind -n M-H resize-pane -L 2
-bind -n M-J resize-pane -D 2
-bind -n M-K resize-pane -U 2
-bind -n M-L resize-pane -R 2
-
-# -- Pane management --
-bind -n M-z resize-pane -Z              # zoom toggle
-bind -n M-x kill-pane                   # close pane
-bind -n M-> swap-pane -D               # swap with next
-bind -n M-< swap-pane -U               # swap with previous
-bind -n M-q display-panes              # show pane numbers
-
-# -- Window navigation (Alt+number) --
-bind -n M-1 select-window -t :1
-bind -n M-2 select-window -t :2
-bind -n M-3 select-window -t :3
-bind -n M-4 select-window -t :4
-bind -n M-5 select-window -t :5
-bind -n M-6 select-window -t :6
-bind -n M-7 select-window -t :7
-bind -n M-8 select-window -t :8
-bind -n M-9 select-window -t :9
-
-# -- Window operations --
-bind -n M-c new-window -c "#{pane_current_path}"
-bind -n M-n next-window
-bind -n M-p previous-window
-bind -n M-w choose-window              # window picker
-
-# -- Session --
-bind -n M-s choose-tree -s -F '#{window_name} #[#{?session_attached,fg=green,fg=red}]#{?session_attached,A ,D }#[default]'
-bind -n M-t run-shell "sesh connect \"$(sesh list | fzf-tmux -p 55%,60% --no-sort --ansi)\""
-
-# -- Copy mode --
-bind -n M-v copy-mode
-
-# -- Popup nvim --
-bind -n M-g display-popup -E -w 90% -h 90% -d '#{pane_current_path}' nvim .
 
 run '~/.tmux/plugins/tpm/tpm'
 
