Skip kill-pane confirmation prompt for Cmd+W

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -114,6 +114,9 @@ bind -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 set -g detach-on-destroy off
 bind-key "T" run-shell "sesh connect \"$(sesh list | fzf-tmux -p 55%,60% --no-sort --ansi)\""
 
+# Close pane without confirmation (Cmd+W via Ghostty)
+bind x kill-pane
+
 # Keep current path when splitting
 bind - split-window -v -c "#{pane_current_path}"
 bind \\ split-window -h -c "#{pane_current_path}"
