Enable renumber-windows to keep Cmd+N keys consistent

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -32,7 +32,7 @@ setw -g automatic-rename on   # rename window to reflect current program
 set -g allow-rename on       # allow programs to change window name
 setw -g automatic-rename-format '#T'
 
-set -g renumber-windows off   # renumber windows when a window is closed
+set -g renumber-windows on    # renumber windows when a window is closed
 
 set -g set-titles on          # set terminal title
 set -g set-titles-string "#T"
